<resources>
    <string name="app_name">KURYcx</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="by_shaztech">By ShazTech</string>
    <string name="logging_in">LOGGING IN</string>
    <string name="profile">PROFILE</string>
    <string name="payments">PAYMENTS</string>
    <string name="winner">WINNER</string>
    <string name="all_draw">All DRAW</string>
    <string name="t_amp_c"><![CDATA[T&C]]></string>
    <string name="support">SUPPORT</string>
    <string name="name">NAME</string>
    <string name="_91_9876543210">+00 0000000000</string>
    <string name="my_payment_history">MY PAYMENT HISTORY</string>
    <string name="draw_history">DRAW HISTORY</string>
    <string name="term5">5. ಡ್ರಾ ಸಾಧಿಸಿದ ಗ್ರಾಹಕರು ಮುಂಬರುವ ವಾರದ ಪಾವತಿಯನ್ನು ಮಾಡಲು ವಿಫಲವಾದರೆ ಸಾರ್ವಜನಿಕವಾಗಿ ಪರಿಣಾಮಗಳನ್ನು ಎದುರಿಸಬೇಕಾಗುತ್ತದೆ</string>
    <string name="term1">1. ಸಾಪ್ತಾಹಿಕ (Weekly) ಡ್ರಾ</string>
    <string name="term2">2. ಪಾವತಿಯನ್ನು ಬುಧವಾರ ಅಥವಾ ಮೊದಲು ಮಾಡಬೇಕು. ಹಾಗೆ ಮಾಡಲು ವಿಫಲವಾದರೆ, ನೀವು 2 ವಾರಗಳವರೆಗೆ ಡ್ರಾಗೆ ಅರ್ಹರಾಗಿರುವುದಿಲ್ಲ</string>
    <string name="term3">3. 5 ನಿರಂತರ ವಾರದ ಪಾವತಿಯನ್ನು ಕಳೆದುಕೊಂಡರೆ ನಿಮ್ಮ ಸದಸ್ಯತ್ವವನ್ನು ಸ್ಕೀಮ್ ಮತ್ತು ಡ್ರಾದಿಂದ ತೆಗೆದುಹಾಕುತ್ತದೆ. ಇಲ್ಲಿಯವರೆಗೆ ಪಾವತಿಸಿದ ಯಾವುದೇ ಮೊತ್ತವನ್ನು ಯೋಜನೆಯ ಕೊನೆಯಲ್ಲಿ ಮಾತ್ರ ಹಿಂತಿರುಗಿಸಲಾಗುತ್ತದೆ.</string>
    <string name="term4">4. ಡ್ರಾ ಮೊತ್ತವನ್ನು 8 ರಿಂದ 15 ದಿನಗಳಲ್ಲಿ ಪಾವತಿಸಲಾಗುತ್ತದೆ</string>
    <string name="term6">6. ಡ್ರಾವನ್ನು KURYcx ಅಪ್ಲಿಕೇಶನ್‌ನಲ್ಲಿ ಸ್ವಯಂ ಉತ್ಪಾದಿಸಲಾಗುತ್ತದೆ</string>
    <string name="term7">7. ಅಪ್ಲಿಕೇಶನ್ ಅಥವಾ ಗ್ರಾಹಕರ ವಿವರಗಳನ್ನು ಯಾವುದೇ ಮೂರನೇ ವ್ಯಕ್ತಿ/ವ್ಯಕ್ತಿಯೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಾರದು. ಭವಿಷ್ಯದ ಯಾವುದೇ ಸಂವಹನ ದೋಷಗಳಿಗೆ ನಾವು ಜವಾಬ್ದಾರರಾಗಿರುವುದಿಲ್ಲ. ಅಂತಹ ಬಳಕೆದಾರರನ್ನು KURYcx ಅಪ್ಲಿಕೇಶನ್ ಮತ್ತು ಅದರ ಸೇವೆಗಳನ್ನು ಪ್ರವೇಶಿಸದಂತೆ ನಿರ್ಬಂಧಿಸಲಾಗುತ್ತದೆ</string>
    <string name="term8">8. ಯಾವುದೇ ವಿಚಾರಣೆಗಳು ಅಥವಾ ದೂರುಗಳಿಗಾಗಿ, ದಯವಿಟ್ಟು ನಿರ್ವಾಹಕರನ್ನು ಸಂಪರ್ಕಿಸಿ</string>
    <string name="kurycx_powere_by_shaztech">KURYcx powere by Shaztech</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="email">Email Address</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="createaccount">Create Account</string>
    <string name="location">Address (Gaddehalla/Suntikoppa/Sridevi/KEB)</string>
    <string name="already_have_an_account_login_here">Already Have an account? Login here</string>
    <string name="schemecode">Scheme Code (Provided by Admin)</string>
    <string name="phone">Phone Number</string>
    <string name="phonenumber">Phone Number (9876543210)</string>
    <string name="new_user_register_here">New User? Register here</string>
</resources>